# workflow-demo-test-web

./: .env.example  .gitignore  CONCURRENT_TASKS_UPDATE.md  README.md  start.sh
backend/: __init__.py  main.py  models.py  pyproject.toml  requirements.txt
backend/routes/: advanced.py  basic.py  openai.py  parallel.py  subtasks.py  utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AdvancedDemo.tsx  BasicTasks.tsx  OpenAIDemo.tsx  ParallelDemo.tsx  SubtaskDemo.tsx  TaskResult.tsx  TaskSidebar.tsx
frontend/src/contexts/: TaskExecutionContext.tsx
frontend/src/hooks/: useTaskRunner.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
workflows/: __init__.py  advanced_tasks.py  app.py  basic_tasks.py  main.py  openai_tasks.py  parallel_tasks.py  pyproject.toml  requirements.txt  subtasks.py
