[tool.poetry]
name = "workflows"
version = "0.1.0"
description = "Render SDK Workflow Examples"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
render_sdk = ">=0.1"
openai = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"